# zbus_sample

./: .gitignore  Makefile  README.md  west.yml
multi_pub_single_sub/: CMakeLists.txt  Makefile  README.md  prj.conf
multi_pub_single_sub/src/: thread_pub.c  thread_sub.c
multi_pub_single_sub/src/events/: int_event.c  int_event.h
